# cd4-perturbseq-target-discovery

./: .gitignore  README.md  pyproject.toml
claude_life_science/: RUN_CS1_AND_CS2.md
data/: README.md
docs/: PerturbTarget-T_feasibility.md  application.md  citation_verification_2026_07_09.md  claude_tooling_log.md  claude_tooling_strategy_2026_07_08.md  ground_truth_immunomodulators.md  hackathon_brief.md  judging_criteria.md  pivot_decision_memo_2026_07_09.md  preregistration_n10_2026_07_08.md  preregistration_n20_2026_07_09.md  preregistration_n21_2026_07_09.md  preregistration_n6_2026_07_08.md  preregistration_n9_2026_07_08.md  research_plan.md  source_paper_briefing_2026_07_08.md  strategy_2026_07_07.md  strategy_vs_authors_future_work.md  submission_summary.md  video_script.md
docs/audits/: adversarial_audit_2026_07_08_findings.json
docs/handoffs/: HANDOFF_01_open_targets_ground_truth.md  HANDOFF_02_reviewer_verify_riskkill.md  README.md
reports/: references.bib  report.html  report.qmd
scripts/: 00_inspect_de_stats.py  01_build_activation_program.py  02_risk_kill_reversal.py  02b_check_circularity.py  02c_validate_efficacy_axis.py  02d_window_nonempty_probe.py  03_export_handoff_inputs.py  04_window_score.py  04b_diagnose_efficacy.py  04c_dropout_selectivity.py  05_figures.py  06_fetch_safety_priors.sh  07_organism_safety.py  08_verify_iei_claim.py  09_check_iei_parser.py  10_tolerance_is_real.py  11_selection_funnel.py  12_magnitude_matched.py  12a_validate_stratified.py  14_reversal_specificity.py  15_fetch_open_targets.sh  16_open_targets_benchmark.py  17_tolerance_is_special.py  18_n6_selectivity_validation.py  19_fetch_ot_genetic_evidence.sh  20_prior_knowledge_nomination.py  21_direction_of_effect.py  22_continuous_genetics.py  23_recovery_pvalue.py  24_evidence_card_firewall.py  25_final_shortlist.py  26_direction_eqtl.py  27_cross_screen_concordance.py  28_gsea_mechanistic_coherence.py  29_nomination_recalibration.py  30_pvalue_genealogy.py  31_denominator_manifest.py  32_leakage_guard.py  33_freimer_functional_overlay.py  34_freimer_secondary_posthoc.py  (+4 more)
(+79 files in other folders)
