[project]
name = "cd4-perturbseq"
version = "0.1.0"
description = "Mining genome-scale CD4+ T cell Perturb-seq data for new drug targets — 2026 Built with Claude: Life Sciences (Research Track)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "William Guesdon", email = "wguesdon@gmail.com" }
]
requires-python = ">=3.13"
keywords = ["perturb-seq", "single-cell", "CD4-T-cell", "drug-target", "immunology"]
dependencies = []

# Analysis dependencies are added on demand with `uv add` as the work proceeds.
# The intended stack (scanpy, anndata, scikit-learn, statsmodels, ...) is described
# in docs/research_plan.md so the environment stays lean until each piece is needed.

[build-system]
requires = ["uv_build>=0.9.20,<0.10.0"]
build-backend = "uv_build"
