[project]
name = "cd4-perturbseq"
version = "0.1.0"
description = "Mining genome-scale CD4+ T cell Perturb-seq data for new drug targets — 2026 Built with Claude: Life Sciences (Research Track)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "William Guesdon", email = "wguesdon@gmail.com" }
]
requires-python = ">=3.13"
keywords = ["perturb-seq", "single-cell", "CD4-T-cell", "drug-target", "immunology"]
dependencies = [
    "anndata>=0.13.0",
    "h5py>=3.16.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
]

# Analysis dependencies are added on demand with `uv add` as the work proceeds.
# The intended stack (scanpy, anndata, scikit-learn, statsmodels, ...) is described
# in docs/research_plan.md so the environment stays lean until each piece is needed.

[build-system]
requires = ["uv_build>=0.9.20,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
gsea = [
    "gseapy>=1.3.0",
]
report = [
    "ipykernel>=7.3.0",
    "jupyter-client>=8.9.1",
    "nbclient>=0.11.0",
    "nbformat>=5.10.4",
    "tabulate>=0.10.0",
]
